chore: refactor code && error handling
