# pkg/user/handlers.go
@@ -6,9 +6,49 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
+// GetAllUsers godoc
+//
+//	@Summary		Get All Users
+//	@Description	Retrieves a list of all users from the database
+//	@Tags			Users
+//	@Produce		json
+//	@Success		200	{array} User
+//	@Failure		400	{object} core.ErrorResponse
+//	@Failure		401	{object} core.ErrorResponse
+//	@Router			/users [get]
 func GetAllUsers(c *fiber.Ctx) error {
 	db := database.New().GetInstance()
 	var users []User
 	db.Find(&users)
-	return c.Status(fiber.StatusOK).JSON(fiber.Map{"status": "success", "message": "Notes Found", "data": users})
+	return c.Status(fiber.StatusOK).JSON(users)
+}
+
+// CreateUser godoc
+//
+//	@Summary		Create a New User
+//	@Description	Create a new user in the database
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Param			data	body	User	true	"The input user struct"
+//	@Success		200		{object}	User			"ok"
+//	@Failure		400		{object}	core.ErrorResponse	"Bad Request"
+//	@Failure		500		{object}	core.ErrorResponse	"Internal Server Error"
+//	@Router			/users [post]
+func CreateUser(c *fiber.Ctx) error {
+	db := database.New().GetInstance()
+
+	user := new(User)
+
+	err := c.BodyParser(user)
+
+	if err != nil {
+		return fiber.NewError(fiber.StatusInternalServerError, err.Error())
+	}
+	err = db.Create(&user).Error
+	if err != nil {
+		return fiber.NewError(fiber.StatusInternalServerError, err.Error())
+	}
+
+	return c.JSON(user)
 }
